// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Customer: This stores customer details who visit or purchase from the restaurant.
Employee: Dataset capturing employee information working within the restaurant.
Ingredient: Ingredient table captures information about ingredients needed for menu items, supplier info.
Supplier: Stores details of suppliers who provide ingredients or products to the restaurant.
Inventory: Captures information about current inventory level for ingredients, last update history.
Menu: This table contains list of menus offered by a restaurant.
Restaurant: data about each restaurant including contact information and location.
MenuItem: items in the menus with their descriptions and prices.
Order: orders made by customers at a restaurant.
OrderItem: Linked to orders, this contains individual menu items, quantity ordered in a specific order.
Payment: Payment records storing information about payments made against orders.
Reservation: Holds data pertaining reserving tables by customers at restaurants.
'''
}

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    phone VARCHAR 
    email VARCHAR 
    }

Table Employee {
    id INTEGER [primary key]
    name VARCHAR 
    role VARCHAR 
    phone VARCHAR 
    }

Table Ingredient {
    id INTEGER [primary key]
    name VARCHAR 
    supplier_id INTEGER 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    contact VARCHAR 
    email VARCHAR 
    }

Table Inventory {
    id INTEGER [primary key]
    ingredient_id INTEGER 
    amount INTEGER 
    last_updated DATETIME 
    }

Table Menu {
    id INTEGER [primary key]
    restaurant_id INTEGER 
    name VARCHAR 
    description VARCHAR 
    }

Table Restaurant {
    id INTEGER [primary key]
    name VARCHAR 
    address VARCHAR 
    phone VARCHAR 
    email VARCHAR 
    }

Table MenuItem {
    id INTEGER [primary key]
    menu_id INTEGER 
    name VARCHAR 
    description VARCHAR 
    price INTEGER 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    restaurant_id INTEGER 
    date DATETIME 
    }

Table OrderItem {
    id INTEGER [primary key]
    order_id INTEGER 
    menu_item_id INTEGER 
    quantity INTEGER 
    }

Table Payment {
    id INTEGER [primary key]
    order_id INTEGER 
    amount INTEGER 
    date DATETIME 
    }

Table Reservation {
    id INTEGER [primary key]
    customer_id INTEGER 
    restaurant_id INTEGER 
    datetime DATETIME 
    num_people INTEGER 
    }



// Relationships
    Ref: Ingredient.(supplier_id) < Supplier.(id)
    Ref: Inventory.(ingredient_id) < Ingredient.(id)
    Ref: Menu.(restaurant_id) < Restaurant.(id)
    Ref: MenuItem.(menu_id) < Menu.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: Order.(restaurant_id) < Restaurant.(id)
    Ref: OrderItem.(menu_item_id) < MenuItem.(id)
    Ref: OrderItem.(order_id) < Order.(id)
    Ref: Payment.(order_id) < Order.(id)
    Ref: Reservation.(customer_id) < Customer.(id)
    Ref: Reservation.(restaurant_id) < Restaurant.(id)
